--- a/README.html
+++ b/README.html
@@ -2,55 +2,68 @@
 <head>
     <meta charset="utf-8">
     <title>Overview</title>
+    <style>
+        .skills{
+            text-align: left;
+            width: fit-content;
+        }
+    </style>
 </head>
 <body>
+
 <!-- Profile views -->
 <p>
     <img src="https://komarev.com/ghpvc/?username=minjunkim0205&color=dc143c" alt="Profile views badge">
 </p>
+
 <!-- Banner -->
 <img src="https://capsule-render.vercel.app/api?type=soft&color=timeGradient&height=300&section=header&text=Hi!%20I'm%20minjunkim0205&fontSize=70"
      alt="Main banner">
+
 <!-- Hello -->
 <h3 align="left">👋 Hi, I'm minjunkim0205</h3>
 <p align="left">
     Hi, I'm a student who is interested in programming and development from South Korea, Hallym University.
 </p>
+
 <!-- Algorithm PS -->
 <h2 align="left">🎮 Algorithm PS(With C++)</h2>
 <p align="left">
     <img src="https://mazassumnida.wtf/api/v2/generate_badge?boj=minjunkim0205" alt="Solved.ac profile info"/>
     <img src="https://mazandi.herokuapp.com/api?handle=minjunkim0205&theme=dark" alt="Solved.ac profile streak"/>
 </p>
+
 <!-- Skills -->
 <h2 align="left">⚡ Skills</h2>
-<h3 align="center"><b>Tools</b></h3>
-<p align="center">
-    <img src="https://img.shields.io/badge/Clion-000000?style=for-the-badge&logo=clion&logoColor=white"
-         alt="Clion badge">
-    <img src="https://img.shields.io/badge/IntelliJ-000000?style=for-the-badge&logo=intellijidea&logoColor=white"
-         alt="IntelliJ badge">
-    <img src="https://img.shields.io/badge/PyCharm-000000?style=for-the-badge&logo=pycharm&logoColor=white"
-         alt="PyCharm badge">
-    <img src="https://img.shields.io/badge/WebStorm-000000?style=for-the-badge&logo=webstorm&logoColor=white"
-         alt="WebStorm badge">
-</p>
-<h3 align="center"><b>Languages</b></h3>
-<p align="center">
-    <img src="https://img.shields.io/badge/C-A8B9CC?style=for-the-badge&logo=c&logoColor=white" alt="C badge">
-    <img src="https://img.shields.io/badge/C++-00599C?style=for-the-badge&logo=c%2B%2B&logoColor=white" alt="C++ badge">
-    <img src="https://img.shields.io/badge/openjdk-437291?style=for-the-badge&logo=openjdk&logoColor=white" alt="OpenJDK badge">
-    <img src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=white"
-         alt="JavaScript badge">
-    <img src="https://img.shields.io/badge/Html-E34F26?style=for-the-badge&logo=html5&logoColor=white" alt="HTML badge">
-    <img src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white"
-         alt="Python badge">
-</p>
-<h3 align="center"><b>Frameworks</b></h3>
-<p align="center">
-    <img src="https://img.shields.io/badge/CMake-064F8C?style=for-the-badge&logo=cmake&logoColor=white"
-         alt="CMake badge">
-</p>
+<div class="skills">
+    <h3 align="center"><b>Tools</b></h3>
+    <p align="center">
+        <img src="https://img.shields.io/badge/Clion-000000?style=for-the-badge&logo=clion&logoColor=white"
+             alt="Clion badge">
+        <img src="https://img.shields.io/badge/IntelliJ-000000?style=for-the-badge&logo=intellijidea&logoColor=white"
+             alt="IntelliJ badge">
+        <img src="https://img.shields.io/badge/PyCharm-000000?style=for-the-badge&logo=pycharm&logoColor=white"
+             alt="PyCharm badge">
+        <img src="https://img.shields.io/badge/WebStorm-000000?style=for-the-badge&logo=webstorm&logoColor=white"
+             alt="WebStorm badge">
+    </p>
+    <h3 align="center"><b>Languages</b></h3>
+    <p align="center">
+        <img src="https://img.shields.io/badge/C-A8B9CC?style=for-the-badge&logo=c&logoColor=white" alt="C badge">
+        <img src="https://img.shields.io/badge/C++-00599C?style=for-the-badge&logo=c%2B%2B&logoColor=white" alt="C++ badge">
+        <img src="https://img.shields.io/badge/openjdk-437291?style=for-the-badge&logo=openjdk&logoColor=white" alt="OpenJDK badge">
+        <img src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=white"
+             alt="JavaScript badge">
+        <img src="https://img.shields.io/badge/Html-E34F26?style=for-the-badge&logo=html5&logoColor=white" alt="HTML badge">
+        <img src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white"
+             alt="Python badge">
+    </p>
+    <h3 align="center"><b>Frameworks</b></h3>
+    <p align="center">
+        <img src="https://img.shields.io/badge/CMake-064F8C?style=for-the-badge&logo=cmake&logoColor=white"
+             alt="CMake badge">
+    </p>
+</div>
 
 <!-- Career -->
 <h2 align="left">🚀 Career</h2>
@@ -121,11 +134,13 @@
         </li>
     </ul>
 </details>
+
 <!-- Blog -->
 <h2 align="left">📖 Blog</h2>
 <p align="left">
     <a href="https://blog.naver.com/minjunkim0205">minjunkim0205 naver blog</a>
 </p>
+
 <!-- GitHub Stats -->
 <h2 align="left">🌏 GitHub Stats</h2>
 <p align="left">
@@ -134,6 +149,7 @@
     <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=minjunkim0205&layout=compact&theme=dark"
          alt="GitHub stats lang info">
 </p>
+
 <!-- I -->
 <hr>
 <p align="left">
