--- a/README.html
+++ b/README.html
@@ -42,22 +42,28 @@
     </p>
     <h3 align="center"><b>Languages</b></h3>
     <p align="center">
-        <img src="https://img.shields.io/badge/C-A8B9CC?style=for-the-badge&logo=c&logoColor=white" alt="C badge">
-        <img src="https://img.shields.io/badge/C++-00599C?style=for-the-badge&logo=c%2B%2B&logoColor=white"
+        <img src="https://img.shields.io/badge/c-A8B9CC?style=for-the-badge&logo=c&logoColor=white" alt="C badge">
+        <img src="https://img.shields.io/badge/c++-00599C?style=for-the-badge&logo=c%2B%2B&logoColor=white"
              alt="C++ badge">
-        <img src="https://img.shields.io/badge/openjdk-437291?style=for-the-badge&logo=openjdk&logoColor=white"
+        <img src="https://img.shields.io/badge/open jdk-437291?style=for-the-badge&logo=openjdk&logoColor=white"
              alt="OpenJDK badge">
-        <img src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=white"
-             alt="JavaScript badge">
-        <img src="https://img.shields.io/badge/Html-E34F26?style=for-the-badge&logo=html5&logoColor=white"
-             alt="HTML badge">
-        <img src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white"
+        <img src="https://img.shields.io/badge/python-3776AB?style=for-the-badge&logo=python&logoColor=white"
              alt="Python badge">
+        <img src="https://img.shields.io/badge/java script-F7DF1E?style=for-the-badge&logo=javascript&logoColor=white"
+             alt="JavaScript badge">
+        <img src="https://img.shields.io/badge/html-E34F26?style=for-the-badge&logo=html5&logoColor=white"
+             alt="HTML badge">
+        <img src="https://img.shields.io/badge/css-1572B6?style=for-the-badge&logo=css3&logoColor=white"
+             alt="Css3 badge">
     </p>
     <h3 align="center"><b>Frameworks</b></h3>
     <p align="center">
-        <img src="https://img.shields.io/badge/CMake-064F8C?style=for-the-badge&logo=cmake&logoColor=white"
+        <img src="https://img.shields.io/badge/c make-064F8C?style=for-the-badge&logo=cmake&logoColor=white"
              alt="CMake badge">
+        <img src="https://img.shields.io/badge/node js-339933?style=for-the-badge&logo=nodedotjs&logoColor=white"
+             alt="NodeJs badge">
+        <img src="https://img.shields.io/badge/express-000000?style=for-the-badge&logo=express&logoColor=white"
+             alt="Express badge">
     </p>
 </div>
 
@@ -91,7 +97,7 @@
     <ul>
         <li>
             <p align="left">
-                <img src="https://img.shields.io/badge/Python-3776AB?style=flat-square&logo=python&logoColor=white"
+                <img src="https://img.shields.io/badge/python-3776AB?style=for-the-badge&logo=python&logoColor=white"
                      alt="Python badge">
             </p>
         </li>
@@ -111,7 +117,7 @@
     <ul>
         <li>
             <p align="left">
-                <img src="https://img.shields.io/badge/C++-00599C?flat-square&logo=c%2B%2B&logoColor=white"
+                <img src="https://img.shields.io/badge/c++-00599C?style=for-the-badge&logo=c%2B%2B&logoColor=white"
                      alt="C++ badge">
                 <img src="https://mazassumnida.wtf/api/mini/generate_badge?boj=minjunkim0205"
                      alt="Solved.ac profile mini info">
