--- a/README.html
+++ b/README.html
@@ -10,11 +10,11 @@
 </p>
 
 <!-- Banner -->
-<img src="https://capsule-render.vercel.app/api?type=soft&color=timeGradient&height=300&section=header&text=Hi!%20I'm%20minjunkim0205&fontSize=70"
+<img src="https://capsule-render.vercel.app/api?type=soft&color=timeGradient&height=300&section=header&text=Hi!%20I'm%20Minjun Kim&fontSize=70"
      alt="Main banner">
 
 <!-- Hello -->
-<h3 align="left">👋 Hi, I'm minjunkim0205</h3>
+<h3 align="left">👋 Hi, I'm Minjun Kim</h3>
 <p align="left">
     Hi, I'm a student who is interested in programming and development from South Korea, Hallym University.
 </p>
