Fix Main banner

--- a/README.html
+++ b/README.html
@@ -10,7 +10,7 @@
 </p>
 
 <!-- Banner -->
-<img src="https://capsule-render.vercel.app/api?type=soft&color=timeGradient&height=300&section=header&text=Hi!%20I'm%20Minjun Kim&fontSize=70"
+<img src="https://capsule-render.vercel.app/api?type=soft&color=timeGradient&height=300&section=header&text=Hi!%20I'm%20Minjun%20Kim&fontSize=70"
      alt="Main banner">
 
 <!-- Hello -->
